Added CV links and updated CV

--- a/_data/navigation.yml
+++ b/_data/navigation.yml
@@ -1,5 +1,7 @@
 # main links
 main:
+    - title: "CV"
+      url: /assets/cvHugoMonzon.pdf
   # - title: "About Me"
   #   url: https://hmonzon.github.io/
   # - title: "Sample Posts"
