--- a/_config.yml
+++ b/_config.yml
@@ -128,6 +128,12 @@ author:
     - label: "GitHub"
       icon: "fab fa-fw fa-github"
       url: "https://github.com/hmonzon"
+    - label: "CV"
+      icon: "fas fa-fw fa-file-text"
+      url: "/assets/cvHugoMonzon.pdf"
+    - label: "LinkedIn"
+      icon: "fab fa-fw fa-square-linkedin"
+      url: "https://www.linkedin.com/in/hugo-monzon-ab6291274/"
     #- label: "Instagram"
     #  icon: "fab fa-fw fa-instagram"
     #  # url: "https://instagram.com/"
